fix(carousel item & thumbnail): Fix z-index carousel item and carousel thumbnail

--- a/1-fancy-slider/assets/styles/style.css
+++ b/1-fancy-slider/assets/styles/style.css
@@ -47,11 +47,15 @@ main {
 
 /* Carousel */
 .carousel {
-    position: absolute;
     height: 100vh;
     width: 100vw;
-    inset: 0 0 0 0;
     overflow: hidden;
+}
+
+.carousel__item {
+    position: absolute;
+    inset: 0 0 0 0;
+
 }
 
 .carousel .carousel__list .carousel__item img {
@@ -190,6 +194,7 @@ main {
     left: 50%;
     bottom: 10vh;
     overflow: hidden;
+    z-index: 9999;
 }
 
 .carousel__thumbnail {
@@ -277,9 +282,11 @@ main {
     }
 }
 
-.carousel__item:nth-child(1) {
+.carousel .carousel__list .carousel__item:nth-child(1) {
     z-index: 1;
 }
+
+/* Clicking next button */
 
 .carousel.next .carousel__item:nth-child(1) img {
     position: absolute;
@@ -325,4 +332,32 @@ main {
         filter: blur(0);
         transform: translateX(0);
     }
+}
+
+.button {
+    display: flex;
+    position: absolute;
+    bottom: 20%;
+    left: 30%;
+    gap: 1rem;
+}
+
+.button button {
+    padding: 1rem;
+    border: none;
+    background-color: rgb(61, 61, 61);
+    color: white;
+    font-weight: bold;
+    transition: all .3s;
+    border-radius: 50%;
+    font-weight: bold;
+}
+
+.button button:hover {
+    cursor: pointer;
+}
+
+/* Previous Button */
+.carousel.prev .carousel__list .carousel__item:nth-child(2) {
+    z-index: 2;
 }
